WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65977
[Qt] Page is getting loaded continuously in the attached reduced page
https://bugs.webkit.org/show_bug.cgi?id=65977
Summary
[Qt] Page is getting loaded continuously in the attached reduced page
Ritesh
Reported
2011-08-10 05:36:45 PDT
Created
attachment 103472
[details]
Reduced page for the mentioned bug Steps to reproduce: 1. Load the attached reduced page Expected Result - Page should load fine Actual Result - Page loaded fine in Mozilla (Firefox for Ubuntu 3.6.18) and Chrome but page is getting loaded continuously on Mini Browser and QtTestBrowser in the nightly build.
Attachments
Reduced page for the mentioned bug
(17.15 KB, application/x-gzip)
2011-08-10 05:36 PDT
,
Ritesh
no flags
Details
patch for review.
(1.77 KB, patch)
2011-09-13 08:30 PDT
,
Zeno Albisser
cshu
: review-
Details
Formatted Diff
Diff
patch for review - added unit test
(3.59 KB, patch)
2011-09-13 11:34 PDT
,
Zeno Albisser
cshu
: review+
Details
Formatted Diff
Diff
patch for review - fixed typos and wording
(3.60 KB, patch)
2011-09-13 14:14 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-09-13 08:30:33 PDT
Created
attachment 107180
[details]
patch for review.
WebKit Review Bot
Comment 2
2011-09-13 08:31:16 PDT
Comment on
attachment 107180
[details]
patch for review. Rejecting
attachment 107180
[details]
from review queue.
zeno.albisser@nokia.com
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 3
2011-09-13 08:31:59 PDT
Comment on
attachment 107180
[details]
patch for review. Rejecting
attachment 107180
[details]
from commit-queue.
zeno.albisser@nokia.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Chang Shu
Comment 4
2011-09-13 08:44:50 PDT
Comment on
attachment 107180
[details]
patch for review. You need to add your attached test page to layout tests. r- for that. Please also run the entire (at least related) layout tests to make sure no regression is introduced.
Zeno Albisser
Comment 5
2011-09-13 11:34:25 PDT
Created
attachment 107200
[details]
patch for review - added unit test
Chang Shu
Comment 6
2011-09-13 13:19:15 PDT
Comment on
attachment 107200
[details]
patch for review - added unit test View in context:
https://bugs.webkit.org/attachment.cgi?id=107200&action=review
good, please fix the typo, etc. before landing.
> Source/WebKit/qt/ChangeLog:10 > + Therefor a subresourceLoader can still be active, when we receive the
typo: Therefore
> Source/WebKit/qt/ChangeLog:13 > + This changeset fixes the described behavior by updating the action states
described behavior => inconsistent state
> Source/WebKit/qt/tests/qwebpage/resources/script.html:2 > +<script language="javascript" type="text/javascript" src="nothing.js"></script>
I think "does_not_exist.js" is better than "nothing.js".
Zeno Albisser
Comment 7
2011-09-13 14:14:45 PDT
Created
attachment 107224
[details]
patch for review - fixed typos and wording Thanks for the feedback. :-)
WebKit Review Bot
Comment 8
2011-09-13 16:09:26 PDT
Comment on
attachment 107224
[details]
patch for review - fixed typos and wording Clearing flags on attachment: 107224 Committed
r95055
: <
http://trac.webkit.org/changeset/95055
>
WebKit Review Bot
Comment 9
2011-09-13 16:09:31 PDT
All reviewed patches have been landed. Closing bug.
Zeno Albisser
Comment 10
2011-09-15 02:33:39 PDT
***
Bug 65983
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug